Finishing to refactor job logic